--- a/ng-4.html
+++ b/ng-4.html
@@ -15,8 +15,8 @@
 </head>
 <body>
     <div ng-app="satya" ng-controller="kl as k">
-    my name is {{k.a}}
-    my name is {{k.b}}
+    my name is {{k.a}} using this keyword and alias for ng-controller
+    my name is {{k.b}} using this keyword and alias for ng-controller
     </div>
     
 </body>
